[package]
name = "bloda-pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bloda_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.23.3", features = ["abi3-py38"]}
bloda-sys = { path = "../bloda-sys"}
